--- a/react/nextjs-nextui/package.json
+++ b/react/nextjs-nextui/package.json
@@ -12,14 +12,15 @@
     "@nextui-org/react": "^2.6.8",
     "framer-motion": "^11.15.0",
     "next": "^14",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/node": "^20",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
