--- a/react/antd/tsconfig.json
+++ b/react/antd/tsconfig.json
@@ -10,7 +10,7 @@
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "types": ["node", "vite/client"],
     "target": "ESNext",
-    "module": "ES2022",
+    "module": "ESNext",
     "moduleResolution": "node",
     "jsx": "react-jsx",
     "rootDirs": [".", "./.react-router/types"],
