--- a/react/next/antd/package.json
+++ b/react/next/antd/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/nextjs-registry": "^1.0.2",
     "ahooks": "^3.8.5",
     "antd": "^5.26.1",
