--- a/react/next/antd/package.json
+++ b/react/next/antd/package.json
@@ -13,14 +13,17 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "ahooks": "^3.8.5",
     "antd": "^5.26.1",
+    "clsx": "^2.1.1",
     "cookies-next": "4.3.0",
     "lucide-react": "^0.517.0",
     "next": "14.2.30",
     "next-themes": "^0.4.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -29,7 +32,7 @@
     "postcss": "^8",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
