--- a/react/next/antd/package.json
+++ b/react/next/antd/package.json
@@ -3,36 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.23.0",
-    "@ant-design/nextjs-registry": "^1.0.2",
-    "ahooks": "^3.8.5",
-    "antd": "^5.26.1",
+    "@ant-design/cssinjs": "^2.0.1",
+    "@ant-design/nextjs-registry": "^1.2.0",
+    "antd": "^6.0.0",
     "clsx": "^2.1.1",
-    "cookies-next": "4.3.0",
-    "lucide-react": "^0.517.0",
-    "next": "14.2.30",
+    "next": "16.0.4",
     "next-themes": "^0.4.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^3.3.1"
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "postcss": "^8",
-    "prettier": "^3.5.3",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "tailwindcss": "^4.1.11",
+    "eslint-config-next": "16.0.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
